tests/whiley/valid/test_1197.wyal
type Point is ({int x, int y} $)
where:
    ($.x > 0) && ($.y > 0)


assert "type invariant not satisfied":
    if:
        true
    then:
        {x: 1, y: 1} is Point


