tests/whiley/invalid/test_150.wyal
type point is ({int x, int y} _this)
where:
    (_this.x > 0) && (_this.y > 0)


assert "type invariant not satisfied":
    if:
        true
    then:
        {x: -1, y: 1} is point


